--- a/PopUpView/Views/PopupView.xib
+++ b/PopUpView/Views/PopupView.xib
@@ -10,72 +10,93 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PopupView" customModule="PopUpView" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="360"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P9e-rA-NYN">
-                    <rect key="frame" x="16" y="80" width="358" height="200"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jbi-E3-IBb">
+                    <rect key="frame" x="0.0" y="0.0" width="390" height="360"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pLP-eJ-c9B">
-                            <rect key="frame" x="16" y="15.999999999999998" width="326" height="20.333333333333329"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MLk-Na-ZS6">
-                            <rect key="frame" x="16" y="40.333333333333329" width="326" height="99.999999999999986"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="100" id="pIu-Jg-mzz"/>
-                            </constraints>
-                            <string key="text">Label Label Label Label Label Label Label Label LabelLabel Label Label Label Label Label Label Label LabelLabel Label Label Label Label Label Label Label Label</string>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ir7-b3-a07">
-                            <rect key="frame" x="16" y="149.66666666666666" width="326" height="34.333333333333343"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P9e-rA-NYN">
+                            <rect key="frame" x="16" y="80" width="358" height="200"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7yW-ue-99V">
-                                    <rect key="frame" x="0.0" y="0.0" width="163" height="34.333333333333336"/>
-                                    <color key="backgroundColor" systemColor="systemMintColor"/>
-                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                    <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" title="Close"/>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Snf-kR-Mwe">
-                                    <rect key="frame" x="163" y="0.0" width="163" height="34.333333333333336"/>
-                                    <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                    <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" title="Confirm"/>
-                                </button>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pLP-eJ-c9B">
+                                    <rect key="frame" x="16" y="15.999999999999998" width="326" height="20.333333333333329"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MLk-Na-ZS6">
+                                    <rect key="frame" x="16" y="40.333333333333329" width="326" height="99.999999999999986"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="100" id="pIu-Jg-mzz"/>
+                                    </constraints>
+                                    <string key="text">Label Label Label Label Label Label Label Label LabelLabel Label Label Label Label Label Label Label LabelLabel Label Label Label Label Label Label Label Label</string>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ir7-b3-a07">
+                                    <rect key="frame" x="16" y="149.66666666666666" width="326" height="34.333333333333343"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7yW-ue-99V">
+                                            <rect key="frame" x="0.0" y="0.0" width="163" height="34.333333333333336"/>
+                                            <color key="backgroundColor" systemColor="systemMintColor"/>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" title="Close"/>
+                                            <connections>
+                                                <action selector="closeButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="QVz-SU-jqI"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Snf-kR-Mwe">
+                                            <rect key="frame" x="163" y="0.0" width="163" height="34.333333333333336"/>
+                                            <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" title="Confirm"/>
+                                            <connections>
+                                                <action selector="confirmButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="BBn-Yz-w7o"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                </stackView>
                             </subviews>
-                        </stackView>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="ir7-b3-a07" secondAttribute="bottom" constant="16" id="0y9-OJ-6WX"/>
+                                <constraint firstAttribute="trailing" secondItem="ir7-b3-a07" secondAttribute="trailing" constant="16" id="6tv-Vj-PdT"/>
+                                <constraint firstAttribute="height" constant="200" id="AX3-yf-XL0"/>
+                                <constraint firstItem="MLk-Na-ZS6" firstAttribute="trailing" secondItem="pLP-eJ-c9B" secondAttribute="trailing" id="AY9-63-vpm"/>
+                                <constraint firstItem="pLP-eJ-c9B" firstAttribute="leading" secondItem="P9e-rA-NYN" secondAttribute="leading" constant="16" id="aiW-hc-iYD"/>
+                                <constraint firstItem="pLP-eJ-c9B" firstAttribute="top" secondItem="P9e-rA-NYN" secondAttribute="top" constant="16" id="nY3-Dm-cI2"/>
+                                <constraint firstItem="ir7-b3-a07" firstAttribute="leading" secondItem="P9e-rA-NYN" secondAttribute="leading" constant="16" id="pRN-hi-crF"/>
+                                <constraint firstAttribute="trailing" secondItem="pLP-eJ-c9B" secondAttribute="trailing" constant="16" id="rJA-sJ-Agd"/>
+                                <constraint firstItem="MLk-Na-ZS6" firstAttribute="top" secondItem="pLP-eJ-c9B" secondAttribute="bottom" constant="4" id="wvs-DC-WGl"/>
+                                <constraint firstItem="MLk-Na-ZS6" firstAttribute="leading" secondItem="pLP-eJ-c9B" secondAttribute="leading" id="z8V-iy-Exc"/>
+                            </constraints>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="ir7-b3-a07" secondAttribute="bottom" constant="16" id="0y9-OJ-6WX"/>
-                        <constraint firstAttribute="trailing" secondItem="ir7-b3-a07" secondAttribute="trailing" constant="16" id="6tv-Vj-PdT"/>
-                        <constraint firstAttribute="height" constant="200" id="AX3-yf-XL0"/>
-                        <constraint firstItem="MLk-Na-ZS6" firstAttribute="trailing" secondItem="pLP-eJ-c9B" secondAttribute="trailing" id="AY9-63-vpm"/>
-                        <constraint firstItem="pLP-eJ-c9B" firstAttribute="leading" secondItem="P9e-rA-NYN" secondAttribute="leading" constant="16" id="aiW-hc-iYD"/>
-                        <constraint firstItem="pLP-eJ-c9B" firstAttribute="top" secondItem="P9e-rA-NYN" secondAttribute="top" constant="16" id="nY3-Dm-cI2"/>
-                        <constraint firstItem="ir7-b3-a07" firstAttribute="leading" secondItem="P9e-rA-NYN" secondAttribute="leading" constant="16" id="pRN-hi-crF"/>
-                        <constraint firstAttribute="trailing" secondItem="pLP-eJ-c9B" secondAttribute="trailing" constant="16" id="rJA-sJ-Agd"/>
-                        <constraint firstItem="MLk-Na-ZS6" firstAttribute="top" secondItem="pLP-eJ-c9B" secondAttribute="bottom" constant="4" id="wvs-DC-WGl"/>
-                        <constraint firstItem="MLk-Na-ZS6" firstAttribute="leading" secondItem="pLP-eJ-c9B" secondAttribute="leading" id="z8V-iy-Exc"/>
+                        <constraint firstItem="P9e-rA-NYN" firstAttribute="centerY" secondItem="jbi-E3-IBb" secondAttribute="centerY" id="6MM-CQ-LUg"/>
+                        <constraint firstAttribute="trailing" secondItem="P9e-rA-NYN" secondAttribute="trailing" constant="16" id="9fJ-hN-vBd"/>
+                        <constraint firstItem="P9e-rA-NYN" firstAttribute="leading" secondItem="jbi-E3-IBb" secondAttribute="leading" constant="16" id="t9T-JO-fPr"/>
+                        <constraint firstItem="P9e-rA-NYN" firstAttribute="centerX" secondItem="jbi-E3-IBb" secondAttribute="centerX" id="yUj-XS-ZIM"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="P9e-rA-NYN" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="7K3-st-Mqt"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="P9e-rA-NYN" secondAttribute="trailing" constant="16" id="Of1-uz-kNC"/>
-                <constraint firstItem="P9e-rA-NYN" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="WTD-gJ-6g2"/>
-                <constraint firstItem="P9e-rA-NYN" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="vGi-dy-z1i"/>
+                <constraint firstAttribute="bottom" secondItem="jbi-E3-IBb" secondAttribute="bottom" id="11k-as-GUl"/>
+                <constraint firstItem="jbi-E3-IBb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="8Pk-9B-R9N"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jbi-E3-IBb" secondAttribute="trailing" id="KwJ-8r-onA"/>
+                <constraint firstItem="jbi-E3-IBb" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="uyE-pr-xSM"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="contentView" destination="jbi-E3-IBb" id="o1W-6d-9IA"/>
+            </connections>
             <point key="canvasLocation" x="47.692307692307693" y="-451.42180094786727"/>
         </view>
     </objects>
