--- a/PopUpView/Views/PopupView.xib
+++ b/PopUpView/Views/PopupView.xib
@@ -61,7 +61,7 @@
                                     </subviews>
                                 </stackView>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="ir7-b3-a07" secondAttribute="bottom" constant="16" id="0y9-OJ-6WX"/>
                                 <constraint firstAttribute="trailing" secondItem="ir7-b3-a07" secondAttribute="trailing" constant="16" id="6tv-Vj-PdT"/>
@@ -101,9 +101,6 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemMintColor">
             <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
